name:                xmonad-wm
version:             0.1.0.0
synopsis:            Paul Samways' XMonad configuration
description:         Please see README.md
homepage:            https://github.com/paulsamways/xmonad-wm#readme
license:             BSD3
license-file:        LICENSE
author:              Paul Samways
maintainer:          paul@paulsamways.com
copyright:           2016 Paul Samways
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -fwarn-tabs -O2 -threaded -rtsopts -with-rtsopts=-N 
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , xmonad >= 0.15
                     , xmonad-contrib >= 0.15
                     , X11
